--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button class="btn" id="resetBtn">Resetar</button>
     </div>
 </div>
-    <script src="assets/js/script.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
